# OOP-labs

lab1/: CMakeLists.txt
lab2/: .gitignor  .gitignore  CMakeLists.txt
lab2/includes/: octal.hpp
lab2/src/: octal.cpp
lab2/tests/: tests.cpp
lab3/: .gitignore  main.cpp
lab3/includes/: array.h  figure.h  pentagon.h  rhombus.h  trapezoid.h
lab3/src/: array.cpp  figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
laba2/: .gitignore  main.cpp
laba2/includes/: octal.hpp
